--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
 }
 
 apply plugin: 'maven'
+apply plugin: 'org.jruyi.thrift'
 apply plugin: 'maven-publish'
 apply plugin: 'com.github.sherter.google-java-format'
 
@@ -49,13 +50,14 @@ dependencies {
     errorproneJavac('com.google.errorprone:javac:9+181-r4173-1')
     errorprone('com.google.errorprone:error_prone_core:2.3.3')
 
-    compile group: 'com.cronutils', name: 'cron-utils', version: '9.0.0'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-    compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
-    compile group: 'com.uber.m3', name: 'tally-core', version: '0.4.0'
     compile group: 'com.uber.tchannel', name: 'tchannel-core', version: '0.8.5'
-    compile group: 'io.micrometer', name: 'micrometer-core', version: '1.1.2'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile group: 'org.apache.thrift', name: 'libthrift', version: '0.9.3'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    compile group: 'com.uber.m3', name: 'tally-core', version: '0.4.0'
+    compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
+    compile group: 'com.cronutils', name: 'cron-utils', version: '9.0.0'
+    compile group: 'io.micrometer', name: 'micrometer-core', version: '1.1.2'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
@@ -76,6 +78,13 @@ task updateDlsSubmodule(type: Exec) {
     dependsOn initDlsSubmodule
     description = 'Updates src/main/idls submodule'
     commandLine 'git', 'submodule', 'update'
+}
+
+compileThrift {
+    dependsOn updateDlsSubmodule
+    sourceItems "src/main/idls/thrift/cadence.thrift","src/main/idls/thrift/shared.thrift"
+
+    nowarn true
 }
 
 compileJava {
