--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 buildscript {
     dependencies {
-        classpath "gradle.plugin.org.jruyi.gradle:thrift-gradle-plugin:0.4.1"
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.11'
     }
 }
 
 plugins {
-    id 'net.minecrell.licenser' version '0.4.1'
     id 'com.github.sherter.google-java-format' version '0.8'
-    id 'net.ltgt.errorprone' version '1.1.1'
+    id 'com.google.protobuf' version '0.8.11'
     id 'java-library'
+    id 'net.ltgt.errorprone' version '1.1.1'
+    id 'net.minecrell.licenser' version '0.4.1'
 }
 
 repositories {
@@ -18,10 +19,11 @@ repositories {
     mavenCentral()
 }
 
-apply plugin: 'maven'
-apply plugin: 'org.jruyi.thrift'
-apply plugin: 'maven-publish'
 apply plugin: 'com.github.sherter.google-java-format'
+apply plugin: 'com.google.protobuf'
+apply plugin: 'idea' // IntelliJ plugin to see files generated from protos
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 if (hasProperty('signing.keyId')) {
     apply plugin: 'signing'
@@ -33,7 +35,7 @@ if (hasProperty('signing.keyId')) {
 googleJavaFormat {
     toolVersion '1.5'
     include '**/*.java'
-    exclude '**/generated-sources/*'
+    exclude '**/generated/*'
 }
 
 group = 'io.temporal'
@@ -50,23 +52,27 @@ dependencies {
     errorproneJavac('com.google.errorprone:javac:9+181-r4173-1')
     errorprone('com.google.errorprone:error_prone_core:2.3.3')
 
-    compile group: 'com.uber.tchannel', name: 'tchannel-core', version: '0.8.5'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
-    compile group: 'org.apache.thrift', name: 'libthrift', version: '0.9.3'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-    compile group: 'com.uber.m3', name: 'tally-core', version: '0.4.0'
-    compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
     compile group: 'com.cronutils', name: 'cron-utils', version: '9.0.0'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
+    compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.8.0'
+    compile group: 'com.uber.m3', name: 'tally-core', version: '0.4.0'
+    compile group: 'io.grpc', name: 'grpc-testing', version: '1.26.0'
     compile group: 'io.micrometer', name: 'micrometer-core', version: '1.1.2'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
+    implementation 'io.grpc:grpc-netty-shaded:1.26.0'
+    implementation 'io.grpc:grpc-protobuf:1.26.0'
+    implementation 'io.grpc:grpc-stub:1.26.0'
+
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    testCompile group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 license {
     header rootProject.file('license-header.txt')
-    exclude 'io/temporal/*.java' // generated code
+    exclude 'io/temporal/proto/**.java' // generated code
 }
 
 task initDlsSubmodule(type: Exec) {
@@ -80,11 +86,36 @@ task updateDlsSubmodule(type: Exec) {
     commandLine 'git', 'submodule', 'update'
 }
 
-compileThrift {
-    dependsOn updateDlsSubmodule
-    sourceItems "src/main/idls/thrift/cadence.thrift","src/main/idls/thrift/shared.thrift"
+protobuf {
+    protoc {
+        artifact = 'com.google.protobuf:protoc:3.11.0'
+    }
+    plugins {
+        grpc {
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.26.0'
+        }
+    }
+    generateProtoTasks {
+        all()*.plugins {
+            grpc {
+                outputSubDir = 'java'
+            }
+        }
+    }
+}
 
-    nowarn true
+clean {
+    delete protobuf.generatedFilesBaseDir
+}
+
+protobuf {
+    generatedFilesBaseDir = "$buildDir/generated"
+}
+idea {
+    module {
+        sourceDirs += file("$buildDir/generated/main/java");
+        sourceDirs += file("$buildDir/generated/main/grpc");
+    }
 }
 
 compileJava {
@@ -104,7 +135,7 @@ compileTestJava {
 task createProperties(dependsOn: processResources) {
     doLast {
         def subdir = new File('$buildDir/resources/main/io/temporal/')
-        if( !subdir.exists() ) {
+        if (!subdir.exists()) {
             subdir.mkdirs()
         }
         new File('$buildDir/resources/main/io/temporal/version.properties').withWriter { w ->
@@ -196,7 +227,7 @@ publishing {
                 username ossrhUsername
                 password ossrhPassword
             }
-            if(project.version.endsWith('-SNAPSHOT')) {
+            if (project.version.endsWith('-SNAPSHOT')) {
                 url 'https://oss.sonatype.org/content/repositories/snapshots/'
             } else {
                 url 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
@@ -205,7 +236,7 @@ publishing {
     }
 }
 
-task registerDomain(type:JavaExec) {
+task registerDomain(type: JavaExec) {
     main = 'io.temporal.RegisterTestDomain'
     classpath = sourceSets.test.runtimeClasspath
 }
