--- a/build.gradle
+++ b/build.gradle
@@ -56,14 +56,16 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
     compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.8.0'
+    compile group: 'com.google.api.grpc', name: 'proto-google-common-protos', version: '1.17.0'
+
     compile group: 'com.uber.m3', name: 'tally-core', version: '0.4.0'
-    compile group: 'io.grpc', name: 'grpc-testing', version: '1.26.0'
+    compile group: 'io.grpc', name: 'grpc-testing', version: '1.28.0'
     compile group: 'io.micrometer', name: 'micrometer-core', version: '1.1.2'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
 
-    implementation 'io.grpc:grpc-netty-shaded:1.26.0'
-    implementation 'io.grpc:grpc-protobuf:1.26.0'
-    implementation 'io.grpc:grpc-stub:1.26.0'
+    implementation 'io.grpc:grpc-netty-shaded:1.28.0'
+    implementation 'io.grpc:grpc-protobuf:1.28.0'
+    implementation 'io.grpc:grpc-stub:1.28.0'
 
     testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testCompile group: 'com.googlecode.junit-toolbox', name: 'junit-toolbox', version: '2.4'
@@ -75,14 +77,14 @@ license {
     exclude 'io/temporal/proto/**.java' // generated code
 }
 
-task initDlsSubmodule(type: Exec) {
-    description = 'Initializes src/main/idls submodule'
+task initSubmodules(type: Exec) {
+    description = 'Initializes submodules'
     commandLine 'git', 'submodule', 'init'
 }
 
-task updateDlsSubmodule(type: Exec) {
-    dependsOn initDlsSubmodule
-    description = 'Updates src/main/idls submodule'
+task updateSubmodules(type: Exec) {
+    dependsOn initSubmodules
+    description = 'Update submodules'
     commandLine 'git', 'submodule', 'update'
 }
 
@@ -92,7 +94,7 @@ protobuf {
     }
     plugins {
         grpc {
-            artifact = 'io.grpc:protoc-gen-grpc-java:1.26.0'
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.28.0'
         }
     }
     generateProtoTasks {
