Use jackson-bom platform dependency management Switch jackson and tally to version ranges

--- a/temporal-kotlin/build.gradle
+++ b/temporal-kotlin/build.gradle
@@ -21,11 +21,14 @@ compileTestKotlin {
 }
 
 dependencies {
+    implementation(platform("com.fasterxml.jackson:jackson-bom:$jacksonVersion"))
+
     implementation project(':temporal-sdk')
 
     implementation "org.jetbrains.kotlin:kotlin-reflect"
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.0"
-    implementation ("com.fasterxml.jackson.module:jackson-module-kotlin:2.13.0") {
+
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
+    implementation ("com.fasterxml.jackson.module:jackson-module-kotlin") {
         exclude group: 'org.jetbrains.kotlin', module: 'kotlin-reflect'
     }
 
