--- a/temporal-serviceclient/build.gradle
+++ b/temporal-serviceclient/build.gradle
@@ -11,7 +11,7 @@ dependencies {
     api "io.grpc:grpc-stub:$grpcVersion" //Part of WorkflowServiceStubs API
     api "io.grpc:grpc-netty-shaded:$grpcVersion" //Part of WorkflowServiceStubs API, specifically SslContext
     api "com.google.protobuf:protobuf-java-util:$protoVersion" //proto request and response objects are a part of this module's API
-    api "com.uber.m3:tally-core:0.11.1"
+    api "com.uber.m3:tally-core:$tallyVersion"
 
     implementation "io.grpc:grpc-core:$grpcVersion"
     implementation "io.grpc:grpc-services:$grpcVersion"
