--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ ext {
     jsonPathVersion = '2.6.0'
     mockitoVersion = '4.0.0'
     micrometerVersion = '[1.0.0,)!!1.7.5'
+    jacksonVersion = '[2.9.0,)!!2.13.0'
+    tallyVersion = '[0.4.0,)!!0.11.1'
 }
 
 apply from: "$rootDir/gradle/versioning.gradle"
