--- a/temporal-sdk/build.gradle
+++ b/temporal-sdk/build.gradle
@@ -1,6 +1,8 @@
 description = '''Temporal Workflow Java SDK'''
 
 dependencies {
+    implementation(platform("com.fasterxml.jackson:jackson-bom:$jacksonVersion"))
+
     api project(':temporal-serviceclient')
     api group: 'com.google.code.gson', name: 'gson', version: '2.8.8'
     api "io.micrometer:micrometer-core:$micrometerVersion"
@@ -10,8 +12,7 @@ dependencies {
         exclude group: 'com.google.errorprone'
         exclude group: 'com.google.j2objc'
     }
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.0'
-    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.13.0'
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
     if (!JavaVersion.current().isJava8()) {
         implementation 'javax.annotation:javax.annotation-api:1.3.2'
     }
