--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # Primary owners
 
-* @mfateev @vitarb @Sushisource @Spikhalskiy @cretz
+* @mfateev @Sushisource @Spikhalskiy @cretz @bergundy @mmcshane
