--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -25,7 +25,7 @@ steps:
     agents:
       queue: "default"
       docker: "*"
-    command: "/bin/sh -c 'docker/buildkite/copyright-and-code-format.sh'"
+    command: "docker/buildkite/copyright-and-code-format.sh"
     timeout_in_minutes: 15
     plugins:
       - docker-compose#v3.8.0:
