--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -15,6 +15,8 @@ steps:
       queue: "default"
       docker: "*"
     command: "./gradlew --no-daemon test"
+    artifact_paths:
+      - "../../**/hs_err_pid*.log"
     timeout_in_minutes: 15
     plugins:
       - docker-compose#v3.8.0:
