--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -37,6 +37,7 @@ steps:
       queue: "default"
       docker: "*"
     command: "fossa init --include-all --no-ansi; fossa analyze --no-ansi -b $${BUILDKITE_BRANCH:-$$(git branch --show-current)}; fossa test --timeout 1800 --no-ansi"
+    branches: "master"
     timeout_in_minutes: 60
     plugins:
       - docker-compose#v3.8.0:
