--- a/temporal-spring-boot-autoconfigure-alpha/build.gradle
+++ b/temporal-spring-boot-autoconfigure-alpha/build.gradle
@@ -1,5 +1,9 @@
 description = '''Spring Boot AutoConfigure for Temporal Java SDK'''
 
+ext {
+    springBootVersion = '2.7.2'// [2.4.0,)
+}
+
 dependencies {
     api(platform("org.springframework.boot:spring-boot-dependencies:$springBootVersion"))
 
