Generate bom using java-platform plugin

--- a/gradle/dependencyManagement.gradle
+++ b/gradle/dependencyManagement.gradle
@@ -1,4 +1,7 @@
 subprojects {
+    if (name == 'temporal-bom') {
+        return
+    }
     configurations.implementation {
         // add global exclusions here if needed
     }
