--- a/gradle/gatherDependencies.gradle
+++ b/gradle/gatherDependencies.gradle
@@ -1,4 +1,7 @@
 subprojects {
+    if (name == 'temporal-bom') {
+        return
+    }
     // Creates build/runtimeDeps folder in each module that contains all the dependencies
     // that need to be in the runtime classpath of the module
     task gatherRuntimeDeps(type: Copy) {
