--- a/gradle/linting.gradle
+++ b/gradle/linting.gradle
@@ -1,4 +1,7 @@
 subprojects {
+    if (name == 'temporal-bom') {
+        return
+    }
     apply plugin: 'com.diffplug.spotless'
 
     spotless {
