Add Mend reachability analysis
This is the json snippet support gave me, but I added the gradle ignore we had before.

--- a/whitesource.config
+++ b/whitesource.config
@@ -1,1 +1,13 @@
-gradle.ignoredConfigurations=.*test.*
+
+{
+  "settingsInheritedFrom": "temporalio/whitesource-config@main",
+  "scanSettings": {
+    "configMode": "EXTERNAL",
+    "configExternalURL": "https://raw.githubusercontent.com/temporalio/sdk-java/master/whitesource.config",
+    "enableReachability": true
+  },
+  "checkRunSettings": {
+    "strictMode": "warning"
+  },
+  "gradle.ignoredConfigurations": ".*test.*"
+}
